# image-scaling

js-imgproxy/: run-serve-image.sh  run.sh
js-imgproxy/serve-directory/: .gitignore  Cargo.toml
js-imgproxy/serve-directory/src/: main.rs
js-sharp/: Dockerfile  build.sh  index.js  package-lock.json  package.json  run.sh  stop.sh
loadtest/: build.gradle  run-axum.sh  run-imgproxy.sh  run-sharp.sh
loadtest/src/gatling/kotlin/: Recorder.kt
loadtest/src/gatling/kotlin/simulations/: AxumResizeImageSimulation.kt  HapiResizeImageSimulation.kt  ImgProxyResizeImageSimulation.kt
rust-axum/: Cargo.toml  Dockerfile  build.sh  run.sh  stop.sh
rust-axum/src/: main.rs
