[package]
name = "serve-directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.0"
axum-extra = "0.3.4"
include_dir = "0.7.2"
mime_guess = "2.0.4"
tokio = { version = "1.17.0", features = ["full"]}